--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-12 col-md-8 col-lg-6 mx-auto">
           <main class="form-signin">
-            <form action="/login" method="post">
+            <form action="/account/login" method="POST">
 
               <h1 class="h3 mb-5 fw-normal text-center">Please sign in</h1>
 
@@ -41,7 +41,7 @@
               </div>
               <button class="w-100 btn  btn-dark" type="submit">Sign in</button>
               <p class="text-center my-4">Or</p>
-              <a class="w-100 btn  btn-dark" href="/register">Create Account</a>
+              <a class="w-100 btn  btn-dark" href="/account/register">Create Account</a>
             </form>
           </main>
         </div>
