--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,7 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-12 col-md-10 col-lg-6 mx-auto">
-          <form class="row g-3" action="/register" method="POST">
+          <form class="row g-3" action="/account/register" method="POST">
             <div class="col-12">
               <label for="name" class="form-label">Name</label>
               <input type="text" name="name" class="form-control" id="name" placeholder="John Doe">
@@ -42,7 +42,7 @@
             <div class="col-12">
               <button type="submit" name="register-now" class="btn w-100 btn-dark">Sign in</button>
               <p class="text-center my-3">Or</p>
-              <a class="btn w-100 btn-dark" href="/login">Login</a>
+              <a class="btn w-100 btn-dark" href="/account/login">Login</a>
             </div>
           </form>
         </div>
