--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-light bg-light static-top">
   <div class="container">
     <a class="navbar-brand" href="/">Start Bootstrap</a>
-    <a class="btn btn-dark" href="/login">Sign Up</a>
+
+    <% if (login) { %>
+    <a class="btn btn-dark" href="/account/login">Log Out</a>
+    <% }else {%>
+    <a class="btn btn-dark" href="/account/login">Sign Up</a>
+    <% } %>
   </div>
 </nav>
